--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
                                         <p class="items-desc">Combinando tecnologia de ponta e conhecimentos regulatórios, desenvolvemos as soluções necessárias para ajudar nossos clientes a alcançar seus objetivos.</p>
                                     </div>
                                 </div> 
-                                <div class="coluna-grega">
+                                <!-- <div class="coluna-grega">
                                     <object data="assets/Group 1.svg" width="220" height="1500"> </object>
-                                </div>
+                                </div> -->
                             </div>
 
                             <div class="pedestal">
@@ -137,7 +137,7 @@
                                         <div class="items-icons">
                                             <i class='bx bx-mobile-alt' ></i>
                                         </div>  
-                                        <p class="items-titulo">SERVIÇOS <br>ESPECIALIZADOS</p>
+                                        <p class="items-titulo">SERVIÇOS<br>ESPECIALIZADOS</p>
                                         <div class="leia-mais">
                                             <i class='bx bx-chevron-down' ></i>
                                         </div>
@@ -145,9 +145,9 @@
                                             finanças de forma segura, além de garantir que tenham suas estruturas bancárias funcionando em até 45 dias.</p>
                                     </div>
                                 </div> 
-                                <div class="coluna-grega">
+                                <!-- <div class="coluna-grega">
                                     <object data="assets/Group 1.svg" width="220" height="1500"> </object>
-                                </div>
+                                </div> -->
                             </div>
                             <!-- FIM DO CARD -->
 
@@ -386,7 +386,39 @@
                             <a href="#!" class="modal-close waves-effect waves-green btn-flat">Fechar</a>
                         </div>
                     </div>
-                
+                   <!-- Estruturação de Negócios-->
+                <div class="box">
+                    <div class="s-icons">
+                        <i class='bx bx-line-chart' style='color: #E6AF50;'></i>    
+                    </div>
+                    <h3>Estruturação de Negócios</h3>
+                    <div class="text-control">
+                        <p>Consultoria e estruturação de negócios  para aqueles que querem iniciar no mercado financeiro.</p>
+                    </div>
+                    <div class="btn-support">
+                        <a href="#modal5" class="read modal-trigger">Saiba mais</a>
+                    </div>
+                </div>
+                   <!-- POP UP WHITE LABEL -->
+                    <div id="modal5" class="modal custom-modal pop-out">
+                        <div class="modal-content">
+                            <div>
+                                <a href="#!" class="fechar-modal modal-close"><i class='bx bx-x'></i></a>
+                            </div>
+                            <h4 class="title-modal">Estruturação de Negócios</h4>
+                            <p class="text-modal">Uma particularidade do serviço de Estruturação de Negócios financeiros é que a LC Capital irá buscar soluções financeiras com na maturação de cada negócio.
+                                <br><br>
+                                Talvez você queira abrir o seu primeiro negócio e já escolheu o segmento de empréstimo e/ou banco digital. Nos da LC Capital levamos você do 0 ao 100 para tornar a sua empresa solida, segura, com base nas regulamentações vigentes e ainda oferecendo uma estrutura tecnológica de ponta.
+                                <br><br>
+                                Talvez você já tenha uma estrutura de negócio existente em qualquer outro segmente e você gostaria de rentabilizar ainda mais o seu negócio. Essa é uma outra possibilidade de atuação da LC Capital, de forma que iremos adequar ao seu negócio os serviços financeiros que torne a sua empresa ainda mais lucrativa.
+                                <br><br>
+                                Entre em contato conosco e descubra todas as possibilidades que você e a sua empresa tem de alavancar os seus resultados.
+                                <br><br>Descubra as vantagens de ter um banco digital personalizado White Label e leve a sua marca para o próximo nível na era digital. Entre em contato conosco para saber mais sobre como podemos ajudar a criar a solução perfeita para o seu negócio.</p>
+                        </div>
+                        <div class="modal-footer">
+                            <a href="#!" class="modal-close waves-effect waves-green btn-flat">Fechar</a>
+                        </div>
+                    </div>
 
 
             </div>
